@@ -9,6 +9,7 @@
 - correct auth init test when no credentials required.
 - correct auto.net installed as auto.smb.
 - update LDAP auth - add autodectect option.
+- correct test for libhesiod.
 
 29/6/2006 autofs-5.0.0_beta6
 ----------------------------
